--- a/client/src/app/tabs/tabs.page.html
+++ b/client/src/app/tabs/tabs.page.html
@@ -8,12 +8,12 @@
     </ion-tab-button>
 
     <ion-tab-button tab="client">
-      <ion-icon name="desktop"></ion-icon>
+      <ion-icon name="laptop"></ion-icon>
       <ion-label>Client</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="node">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="link"></ion-icon>
       <ion-label>Full Node</ion-label>
     </ion-tab-button>
 
