--- a/client/src/app/client/client.page.html
+++ b/client/src/app/client/client.page.html
@@ -7,34 +7,42 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-header>
-      <ion-label>Wallet {{wallet.walletaddress}}</ion-label>
-    </ion-header>
-    <ion-item>
-      <ion-label>Balance $</ion-label>
-      <ion-label>
-        <p>{{balanceSubject | async}}</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
-  <br/>
-  <br/>
-  <ion-list>
-    <ion-header>
-      <ion-label>New Transaction</ion-label>
-    </ion-header>
-    <ion-item>
-      <ion-label>Recipient</ion-label>
-      <ion-input [(ngModel)]="recipientAddress" type="text"></ion-input>
-      <ion-select [(ngModel)]="recipientAddress" placeholder="Select One">
-        <ion-select-option *ngFor="let address of recipientAddresses | async">{{address}}</ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-item>
-      <ion-label>Amount $</ion-label>
-      <ion-input [(ngModel)]="amountToSend" type="number"></ion-input>
-    </ion-item>
-  </ion-list>
-  <ion-button expand="block" type="submit" class="ion-no-margin" (click)="sendMoney()">Send</ion-button>
+  <div *ngIf="wallet | async; let walletInst">
+    <ion-list>
+      <ion-header>
+        <ion-label>Wallet {{walletInst.walletaddress}}</ion-label>
+      </ion-header>
+      <ion-item>
+        <ion-label>Balance $</ion-label>
+        <ion-label>
+          <p>{{walletInst.balance}}</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Active</ion-label>
+        <ion-label>
+          <p>{{walletInst.age == 0 ? 'NO' : 'YES'}}</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+    <br/>
+    <br/>
+    <ion-list *ngIf="walletInst.age > 0">
+      <ion-header>
+        <ion-label>New Transaction</ion-label>
+      </ion-header>
+      <ion-item>
+        <ion-label>Recipient</ion-label>
+        <ion-input [(ngModel)]="recipientAddress" type="text"></ion-input>
+        <ion-select [(ngModel)]="recipientAddress" placeholder="Select One">
+          <ion-select-option *ngFor="let address of recipientAddresses | async">{{address}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label>Amount $</ion-label>
+        <ion-input [(ngModel)]="amountToSend" type="number"></ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-button expand="block" type="submit" class="ion-no-margin" (click)="sendMoney()">Send</ion-button>
+  </div>
 </ion-content>
