fixed some design issues

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,30 +8,28 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <img src="/assets/title.svg" alt="Blockchain Icon made by www.flaticon.com/authors/ddara" />
+      <img src="/assets/title.svg" style="max-width: 443px; max-height: 228px;"/>
       <ion-card-header>
         <ion-card-subtitle>The Demo</ion-card-subtitle>
         <ion-card-title>Simple Blockchain</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <p>
-          Blockchain is - simply spoken - a database where all data is held by the users (Nodes).<br/>
-          - Trust concerning integrity of the data is given by irreversably sealing blocks of transactions (Mining).<br/>
-          - Completeness over the data is given by regularly negotiating about current complete and correct version (Consensus)
+          Blockchain is a database without any central instance. All data is held by the users (Nodes).<br/>
+          The Blockchain technology ensures <b>Availability</b> and <b>Integrity</b> of the data.<br/>
+
         </p>
-        <br/>
-        <p>
-          This Demo is intended to showcase these basic steps of a Blockchain:<br/>
-          - Start the App at least twice<br/>
-          - Have a look at the 'Node's<br/>
-          - Mine the first blocks; this activates the client's wallets<br/>
-          - Do some transactions between the clients<br/>
-          - Mine as you want; the blockchain grows<br/><br/>
-          - Start a third (or fourth ...) App<br/>
-          - Look at it's Node - it's empty!<br/>
-          - Run 'Consensus' - it receives the chain!<br/>
-          - Go on playing arount ...
-        </p>
+        <ol>
+          <li>Start the App at least twice</li>
+          <li>Have a look at the 'Node's</li>
+          <li>Mine the first block</li>
+          <li>Go to 'Client'; do some transactions</li>
+          <li>Mine the next blocks</li>
+          <li>Start a third App</li>
+          <li>Look at it's Node - it's empty!</li>
+          <li>Run 'Consensus' - yeahh data is here!</li>
+          <li>Go on playing around ...
+        </ol>
         <br/>
         <p>
           <b>Note: </b>The chain lives only in memory. It lives exactly as long as - worldwide - at least one Node (App) is alive!
